--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "turbo run dev --parallel"
+    "dev": "turbo run dev --parallel",
+    "build": "turbo run build",
+    "start": "turbo run start",
+    "start:dev": "turbo run start:dev --parallel",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint -- --fix",
+    "test": "turbo run test",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "install:all": "npm install && npm install --prefix apps/api-gateway && npm install --prefix apps/auth-service"
   },
   "keywords": [],
   "author": "",
