--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -15,6 +15,9 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@jungle/types": "*",
+    "@jungle/utils": "*",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
@@ -22,7 +25,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.0",
     "@nestjs/throttler": "^6.0.0",
-    "axios": "^1.7.9",
+    "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "passport": "^0.7.0",
@@ -31,6 +34,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@jungle/eslint-config": "*",
+    "@jungle/tsconfig": "*",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
