--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -15,6 +15,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@jungle/types": "*",
+    "@jungle/utils": "*",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
@@ -34,6 +36,8 @@
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
+    "@jungle/eslint-config": "*",
+    "@jungle/tsconfig": "*",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
