--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,37 @@
     },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**", "build/**"],
+      "env": ["NODE_ENV"]
+    },
+    "start": {
+      "dependsOn": ["build"],
+      "cache": false
+    },
+    "start:dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "start:prod": {
+      "dependsOn": ["build"],
+      "cache": false
+    },
+    "lint": {
+      "outputs": [],
+      "cache": true
+    },
+    "test": {
+      "dependsOn": ["build"],
+      "outputs": ["coverage/**"],
+      "cache": true
+    },
+    "clean": {
+      "cache": false
     }
-  }
+  },
+  "globalEnv": ["NODE_ENV", "JWT_SECRET", "DB_HOST", "DB_USER", "DB_PASS", "DB_NAME"],
+  "globalDependencies": [
+    "tsconfig.json",
+    "package.json"
+  ]
 }
