--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - '3001:3001'
     environment:
-      - NODE_ENV=development
-      - JWT_SECRET=secret
+      - NODE_ENV=${NODE_ENV:-development}
+      - JWT_SECRET=${JWT_SECRET:-secret}
       - AUTH_SERVICE_URL=http://auth-service:4000
     networks:
       - challenge-network
@@ -27,11 +27,12 @@ services:
     ports:
       - "4000:4000"
     environment:
+      - NODE_ENV=${NODE_ENV:-development}
       - DB_HOST=db
-      - DB_USER=postgres
-      - DB_PASS=password
-      - DB_NAME=challenge_db
-      - JWT_SECRET=secret
+      - DB_USER=${POSTGRES_USER:-postgres}
+      - DB_PASS=${POSTGRES_PASSWORD:-password}
+      - DB_NAME=${POSTGRES_DB:-challenge_db}
+      - JWT_SECRET=${JWT_SECRET:-secret}
     networks:
       - challenge-network
     depends_on:
@@ -46,9 +47,9 @@ services:
     networks:
       - challenge-network
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: postgres
-      POSTGRES_DB: challenge_db
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-challenge_db}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -62,8 +63,8 @@ services:
     networks:
       - challenge-network
     environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: admin
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER:-admin}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS:-admin}
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
 
