--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "jungle-challege",
   "private": true,
-    "workspaces": [
+  "workspaces": [
     "apps/*",
     "packages/*"
   ],
+  "packageManager": "npm@10.9.2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
