--- a/apps/tasks-service/Dockerfile
+++ b/apps/tasks-service/Dockerfile
@@ -6,7 +6,7 @@ RUN npm install -g turbo
 
 FROM base AS pruner
 COPY . .
-RUN turbo prune auth-service --docker
+RUN turbo prune tasks-service --docker
 
 FROM base AS builder
 COPY .gitignore .gitignore
@@ -16,7 +16,7 @@ RUN npm install
 COPY --from=pruner /app/out/full/ .
 COPY turbo.json turbo.json
 
-RUN turbo run build --filter=auth-service...
+RUN turbo run build --filter=tasks-service...
 
 FROM node:20-alpine AS runner
 WORKDIR /app
@@ -24,15 +24,15 @@ WORKDIR /app
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nestjs
 
-COPY --from=builder --chown=nestjs:nodejs /app/apps/auth-service/dist ./apps/auth-service/dist
-COPY --from=builder --chown=nestjs:nodejs /app/apps/auth-service/package*.json ./apps/auth-service/
+COPY --from=builder --chown=nestjs:nodejs /app/apps/tasks-service/dist ./apps/tasks-service/dist
+COPY --from=builder --chown=nestjs:nodejs /app/apps/tasks-service/package*.json ./apps/tasks-service/
 COPY --from=builder --chown=nestjs:nodejs /app/packages ./packages
 COPY --from=builder --chown=nestjs:nodejs /app/package*.json ./
 
 RUN npm install --omit=dev
 
 USER nestjs
-WORKDIR /app/apps/auth-service
-EXPOSE 3000
+WORKDIR /app/apps/tasks-service
+EXPOSE 5000
 
 CMD ["node", "dist/main.js"]
