--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "scripts": {
     "dev": "turbo run dev --parallel",
     "dev:services": "turbo run dev --parallel --filter='./apps/*'",
+    "dev:infra": "docker-compose -f docker-compose.dev.yml up -d",
+    "dev:infra:stop": "docker-compose -f docker-compose.dev.yml down",
     "build": "turbo run build",
     "build:packages": "turbo run build --filter='./packages/*'",
     "start": "turbo run start",
