--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -15,9 +15,9 @@
     "dev": "nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/data-source.ts",
-    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
-    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/data-source.ts",
+    "migration:run": "test -f dist/data-source.js && typeorm migration:run -d dist/data-source.js || typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
+    "migration:revert": "test -f dist/data-source.js && typeorm migration:revert -d dist/data-source.js || typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
+    "migration:show": "test -f dist/data-source.js && typeorm migration:show -d dist/data-source.js || typeorm-ts-node-commonjs migration:show -d src/data-source.ts",
     "migration:create": "typeorm migration:create"
   },
   "dependencies": {
