--- a/apps/tasks-service/package.json
+++ b/apps/tasks-service/package.json
@@ -15,9 +15,9 @@
     "dev": "nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/data-source.ts",
-    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
-    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/data-source.ts",
+    "migration:run": "test -f dist/data-source.js && typeorm migration:run -d dist/data-source.js || typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
+    "migration:revert": "test -f dist/data-source.js && typeorm migration:revert -d dist/data-source.js || typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
+    "migration:show": "test -f dist/data-source.js && typeorm migration:show -d dist/data-source.js || typeorm-ts-node-commonjs migration:show -d src/data-source.ts",
     "migration:create": "typeorm migration:create"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
