--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,11 @@
     "dev": "tsc --watch",
     "clean": "rm -rf dist"
   },
+  "dependencies": {
+    "bcrypt": "^5.1.1"
+  },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "typescript": "^5.7.3"
   }
 }
