--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,15 @@ services:
       - JWT_SECRET=${JWT_SECRET:-secret}
       - AUTH_SERVICE_URL=http://auth-service:4000
       - TASKS_SERVICE_URL=http://tasks-service:5000
+      - NOTIFICATIONS_SERVICE_URL=http://notifications-service:6000
     networks:
       - challenge-network
     depends_on:
       auth-service:
         condition: service_started
       tasks-service:
+        condition: service_started
+      notifications-service:
         condition: service_started
       db:
         condition: service_started
@@ -53,6 +56,28 @@ services:
       - DB_USER=${POSTGRES_USER:-postgres}
       - DB_PASS=${POSTGRES_PASSWORD:-password}
       - DB_NAME=${POSTGRES_DB:-challenge_db}
+      - JWT_SECRET=${JWT_SECRET:-secret}
+      - RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER:-admin}:${RABBITMQ_DEFAULT_PASS:-admin}@rabbitmq:5672
+    networks:
+      - challenge-network
+    depends_on:
+      - db
+      - rabbitmq
+
+  notifications-service:
+    build:
+      context: .
+      dockerfile: ./apps/notifications-service/Dockerfile
+    ports:
+      - "6000:6000"
+    environment:
+      - NODE_ENV=${NODE_ENV:-development}
+      - PORT=6000
+      - DB_HOST=db
+      - DB_USER=${POSTGRES_USER:-postgres}
+      - DB_PASSWORD=${POSTGRES_PASSWORD:-password}
+      - DB_NAME=${POSTGRES_DB:-challenge_db}
+      - DB_PORT=5432
       - JWT_SECRET=${JWT_SECRET:-secret}
       - RABBITMQ_URL=amqp://${RABBITMQ_DEFAULT_USER:-admin}:${RABBITMQ_DEFAULT_PASS:-admin}@rabbitmq:5672
     networks:
