chora: refactor and update envs to match docker

--- a/apps/api-gateway/.env.example
+++ b/apps/api-gateway/.env.example
@@ -7,10 +7,12 @@ PORT=3001
 # JWT Secret (deve ser a mesma em todos os serviços)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# URL do Auth Service (usar o nome do container quando rodar com Docker)
-# Para desenvolvimento local: http://localhost:4000
-# Para Docker: http://auth-service:4000
+# URLs dos Serviços (usar o nome do container quando rodar com Docker)
+# Para desenvolvimento local: http://localhost:{PORT}
+# Para Docker: http://{service-name}:{PORT}
 AUTH_SERVICE_URL=http://auth-service:4000
+TASKS_SERVICE_URL=http://tasks-service:5000
+NOTIFICATIONS_SERVICE_URL=http://notifications-service:6000
 
 # Rate Limiting
 THROTTLE_TTL=60000
