--- a/apps/tasks-service/.env.example
+++ b/apps/tasks-service/.env.example
@@ -8,6 +8,8 @@ PORT=5000
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # PostgreSQL Database
+# Para desenvolvimento local: localhost
+# Para Docker: db (nome do container)
 DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
@@ -16,3 +18,12 @@ DB_NAME=challenge_db
 
 # RabbitMQ
 RABBITMQ_URL=amqp://admin:admin@rabbitmq:5672
+
+# Auth Service URL (para buscar informações de usuários)
+# Para desenvolvimento local: http://localhost:4000
+# Para Docker: http://auth-service:4000
+AUTH_SERVICE_URL=http://auth-service:4000
+
+# TypeORM
+TYPEORM_SYNCHRONIZE=true
+TYPEORM_LOGGING=false
