chore: refactor services into using configService

--- a/apps/tasks-service/.env.example
+++ b/apps/tasks-service/.env.example
@@ -21,8 +21,8 @@ RABBITMQ_URL=amqp://admin:admin@rabbitmq:5672
 
 # Auth Service URL (para buscar informações de usuários)
 # Para desenvolvimento local: http://localhost:4000
-# Para Docker: http://auth-service:4000
-AUTH_SERVICE_URL=http://auth-service:4000
+# Para Docker: http://auth-service:4000 (configurado no docker-compose.yml)
+AUTH_SERVICE_URL=http://localhost:4000
 
 # TypeORM
 TYPEORM_SYNCHRONIZE=true
