--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,11 +90,9 @@ services:
     build:
       context: .
       dockerfile: ./apps/notifications-service/Dockerfile
-    # Porta NÃO exposta publicamente - apenas acessível via rede interna do Docker
-    # Para acesso externo, use o API Gateway na porta 3001
-    # Para debugging local, descomente a linha abaixo:
-    # ports:
-    #   - "6000:6000"
+    # Porta exposta para conexões WebSocket diretas do frontend
+    ports:
+      - "6001:6000"
     environment:
       - NODE_ENV=${NODE_ENV:-development}
       - PORT=6000
