--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,9 +1,18 @@
 {
   "name": "@jungle/types",
   "version": "1.0.0",
+  "type": "module",
   "description": "Shared TypeScript types and interfaces",
   "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
