feat(web): implement websocket connection and notifications

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -3,8 +3,9 @@
 VITE_API_URL=http://localhost:3001
 
 # WebSocket Configuration
-# URL do serviço de notificações
-VITE_WS_URL=http://localhost:6000/notifications
+# URL do serviço de notificações (WebSocket)
+# Nota: A porta 6000 é bloqueada por navegadores, use 6001
+VITE_NOTIFICATIONS_SERVICE_URL=http://localhost:6001
 
 # Environment
 NODE_ENV=development
