--- a/apps/notifications-service/package.json
+++ b/apps/notifications-service/package.json
@@ -44,6 +44,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "ts-node": "^10.9.2",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
