--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "setup": "npm install && npm run build:packages",
     "migration:generate-helper": "./scripts/generate-migration.sh",
-    "migration:run": "npm run migration:run --workspace=auth-service && npm run migration:run --workspace=tasks-service",
-    "migration:revert": "npm run migration:revert --workspace=tasks-service && npm run migration:revert --workspace=auth-service",
-    "migration:show": "npm run migration:show --workspace=auth-service && npm run migration:show --workspace=tasks-service"
+    "migration:run": "npm run migration:run --workspace=auth-service && npm run migration:run --workspace=tasks-service && npm run migration:run --workspace=notifications-service",
+    "migration:revert": "npm run migration:revert --workspace=notifications-service && npm run migration:revert --workspace=tasks-service && npm run migration:revert --workspace=auth-service",
+    "migration:show": "npm run migration:show --workspace=auth-service && npm run migration:show --workspace=tasks-service && npm run migration:show --workspace=notifications-service"
   },
   "keywords": [],
   "author": "",
