--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@jungle/auth": "*",
     "@jungle/types": "*",
     "@jungle/utils": "*",
     "@nestjs/axios": "^4.0.1",
