refactor: make packages and envs consistent across services

--- a/apps/notifications-service/.env.example
+++ b/apps/notifications-service/.env.example
@@ -13,7 +13,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=password
+DB_PASS=password
 DB_NAME=challenge_db
 
 # RabbitMQ
