--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -35,4 +35,7 @@ USER nestjs
 WORKDIR /app/apps/api-gateway
 EXPOSE 3001
 
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost:3001/health || exit 1
+
 CMD ["node", "dist/main.js"]
