--- a/apps/auth-service/Dockerfile
+++ b/apps/auth-service/Dockerfile
@@ -41,4 +41,7 @@ USER nestjs
 WORKDIR /app/apps/auth-service
 EXPOSE 4000
 
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost:4000/health || exit 1
+
 CMD ["sh", "-c", "npm run migration:run && node dist/main.js"]
