--- a/apps/notifications-service/Dockerfile
+++ b/apps/notifications-service/Dockerfile
@@ -39,4 +39,7 @@ USER nestjs
 WORKDIR /app/apps/notifications-service
 EXPOSE 6000
 
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost:6000/health || exit 1
+
 CMD ["sh", "-c", "npm run migration:run && node dist/main.js"]
