refactor: remove unused variables and comments

--- a/apps/auth-service/.env.example
+++ b/apps/auth-service/.env.example
@@ -5,6 +5,8 @@ NODE_ENV=development
 PORT=4000
 
 # JWT Configuration
+# ⚠️ IMPORTANTE: Mude este secret em produção! Use um valor aleatório e seguro.
+# Exemplo de geração: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_ACCESS_TOKEN_EXPIRATION=1h
 JWT_REFRESH_TOKEN_EXPIRATION=7d
@@ -17,7 +19,3 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASS=password
 DB_NAME=challenge_db
-
-# TypeORM
-TYPEORM_SYNCHRONIZE=true
-TYPEORM_LOGGING=false
