--- a/apps/tasks-service/.env.example
+++ b/apps/tasks-service/.env.example
@@ -5,6 +5,8 @@ NODE_ENV=development
 PORT=5000
 
 # JWT Configuration
+# ⚠️ IMPORTANTE: Mude este secret em produção! Use um valor aleatório e seguro.
+# Exemplo de geração: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # PostgreSQL Database
@@ -23,7 +25,3 @@ RABBITMQ_URL=amqp://admin:admin@rabbitmq:5672
 # Para desenvolvimento local: http://localhost:4000
 # Para Docker: http://auth-service:4000 (configurado no docker-compose.yml)
 AUTH_SERVICE_URL=http://localhost:4000
-
-# TypeORM
-TYPEORM_SYNCHRONIZE=true
-TYPEORM_LOGGING=false
