--- a/apps/notifications-service/.env.example
+++ b/apps/notifications-service/.env.example
@@ -5,6 +5,8 @@ NODE_ENV=development
 PORT=6000
 
 # JWT Configuration
+# ⚠️ IMPORTANTE: Mude este secret em produção! Use um valor aleatório e seguro.
+# Exemplo de geração: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # PostgreSQL Database
@@ -18,7 +20,3 @@ DB_NAME=challenge_db
 
 # RabbitMQ
 RABBITMQ_URL=amqp://admin:admin@rabbitmq:5672
-
-# TypeORM
-TYPEORM_SYNCHRONIZE=true
-TYPEORM_LOGGING=false
