fix: development web not working and date inconsistency on UI

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,6 +1,6 @@
 # API Configuration
 # URL da API Gateway
-VITE_API_URL=http://localhost:3001
+VITE_API_URL=http://localhost:3001/api
 
 # WebSocket Configuration
 # URL do serviço de notificações (WebSocket)
