--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,16 @@
-# Este arquivo é para referência.
-# As variáveis de ambiente estão configuradas individualmente em cada serviço.
-#
-# Copie este arquivo para .env se necessário para desenvolvimento local:
-# cp .env.example .env
-
-# Ambiente Global
+# Configuração comum para todos os ambientes
 NODE_ENV=development
+JWT_SECRET=secret
 
-# JWT Secret (compartilhado entre serviços)
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-
-# PostgreSQL (usado pelo Docker Compose)
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
+# Database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=challenge_db
 
-# RabbitMQ (usado pelo Docker Compose)
-RABBITMQ_HOST=rabbitmq
-RABBITMQ_PORT=5672
-RABBITMQ_MANAGEMENT_PORT=15672
+# RabbitMQ
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=admin
+
+# URLs (usadas no build do frontend Docker)
+VITE_API_URL=http://localhost:3001/api
+VITE_NOTIFICATIONS_SERVICE_URL=http://localhost:6001
